# NearcadeForked

./: .gitignore  .gitmodules  .lintstagedrc.json  .prettierignore  CLAUDE.md  Nearcade.bat  Nearcade.cmd  Nearcade.command  Nearcade.desktop  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt.md  REFACTOR_PLAN.md  electron-main.js  electron-preload.js  electron-viewer-preload.js  eslint.config.mjs  extract-text.js  package-lock.json  package.json  release_backup.json  test_kbm.js  vitest.config.mjs  wrangler.jsonc
.github/: CODEOWNERS
.github/workflows/: NearsecWebsite.yml  build-hm-bridge.yml  ci.yml  ios-unsigned.yml  issue-translator.yml  publish-accent-color.yml  release.yml  translate.yaml  version-bump.yml
app/: electron-main.js  electron-preload.js  electron-viewer-preload.js
app/electron/: cli-flags.js  discord-rpc.js  logger.js  settings.js  state.js  updater.js  window.js
app/src/sidecar/input_backends/experimental/steamvr_driver/: CMakeLists.txt  README.md  driver_nearsec_vr.cpp
assets/avatars/: LICENSE.md
assets/locales/: de.json  es.json  fr.json  index.json  pt.json
compatibility/: README.md
compatibility/backends/: registry.c
compatibility/devices/: h700.json  linux-x86_64.json  rk3566.json
compatibility/include/: nearcade_backends.h
compatibility/scripts/: build.sh
config/: controller-db-builder.html  controllers.json  game_profiles.csv  kbm_bindings.json
dist-android/: gamepad-popup.html  index.html  viewer.html
dist-android/js/: audio-util.js  host.js  i18n.js  lobby.js  server.js  viewer.js
docs/: ARCHITECTURE.md
flatpak/: org.cutefame.Nearcade.metainfo.xml  org.cutefame.Nearcade.yml  org.cutefame.NearsecTogether.yml
packaging/: capacitor.config.ts  package.json
packaging/flatpak/: generated-sources.json  org.cutefame.Nearcade.desktop
src/css/: host.css
src/docs/: AUTOMATED_SETUP_LEGALITY.md  ERROR_CODES.md  NEARCADE_ARCADE.md  VPS_SETUP.md  WIVRN_INTEGRATION.md  WIVRN_PIPELINE.md  decoding_roadmap.md
src/main/: config.js  data-channel.js  ipc.js
src/pages/: dashboard.html  gamepad-popup.html  host-custom.html  host-minimal.html  host-modals.html  host-playground.html  host.html  index.html  old_host.html  setup.html  standby.html
src/scripts/: frame-predictor.js  host.js  p2p-signaler.js  server.js  viewer.js  webcodecs-host.js  webcodecs-viewer.js
vps/: Caddyfile  Cargo.toml  SETUP_HELP.md  deploy.sh  nearsec-router.service
vps/src/: main.rs
website/: README.md  _worker.js  _worker.js.map  arcade.js  build.sh  nearsec-arcade.html  nearsec-home.html  no-op-worker.js.map
(+220 files in other folders)
